<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:padding="24dp"
    tools:context=".view.MainActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search_movies"
        android:textColor="@color/text_primary"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp" />

    <!-- Search input -->
    <EditText
        android:id="@+id/searchInput"
        android:layout_width="0dp"
        android:maxWidth="320dp"
        android:layout_height="50dp"
        android:autofillHints="Spider man, Batman, etc."
        android:hint="@string/search_for_a_movie"
        android:textColor="@color/white"
        android:textColorHint="@color/text_secondary"
        android:background="@drawable/rounded_edittext"
        android:paddingHorizontal="16dp"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <!-- Search button -->
    <Button
        android:id="@+id/searchButton"
        android:layout_width="0dp"
        android:maxWidth="320dp"
        android:layout_height="48dp"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:backgroundTint="@color/accent_purple"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toBottomOf="@id/searchInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Movie List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movieList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:contentDescription="@string/movie_list_description"
        app:layout_constraintTop_toBottomOf="@id/searchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
